--- a/courses.html
+++ b/courses.html
@@ -181,7 +181,127 @@
     document.getElementById("studentName").innerText = "Student";
   }
 </script>
+<!-- 🔥 Firebase -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
+<script>
+
+// SAME CONFIG YOU USED IN index.html
+const firebaseConfig = {
+  apiKey: "AIzaSyCehyZQukDfslKTY_u9yXcUrzGtMNHvuPA",
+  authDomain: "his-academy.firebaseapp.com",
+  projectId: "his-academy",
+  storageBucket: "his-academy.firebasestorage.app",
+  messagingSenderId: "573278549264",
+  appId: "1:573278549264:web:ca2ff160b5a100cc7d2195",
+  measurementId: "G-8WPMS7H33F"
+};
+
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const db = firebase.firestore();
+
+let studentData = null;
+
+auth.onAuthStateChanged(async(user)=>{
+  if(!user){
+    window.location.href = "index.html";
+  }else{
+
+    const doc = await db.collection("students").doc(user.uid).get();
+
+    if(!doc.exists){
+      alert("Student record not found");
+      return;
+    }
+
+    studentData = doc.data();
+
+    addReferralUI();
+  }
+});
+
+
+function addReferralUI(){
+
+  const container = document.querySelector(".card");
+
+  const referralDiv = document.createElement("div");
+  referralDiv.innerHTML = `
+    <hr style="margin:20px 0; opacity:0.2;">
+    <h3 style="color:#FFD700;">OR Refer 10 Friends & Unlock FREE</h3>
+    <button onclick="shareLoginLink()">Share Login Link</button>
+    <div style="text-align:center; margin-top:10px; font-size:20px; color:#FFD700;">
+      🔥 Streak: <span id="streakCount">${studentData.referralCount || 0}</span>/10
+    </div>
+    <div id="unlockSection" style="margin-top:10px; text-align:center;"></div>
+  `;
+
+  container.appendChild(referralDiv);
+
+  updateUnlockUI();
+}
+
+
+function updateUnlockUI(){
+
+  const unlockSection = document.getElementById("unlockSection");
+
+  if(studentData.approved === true){
+    unlockSection.innerHTML =
+      "<h3 style='color:#FFD700;'>🎉 Course Access Approved!</h3>";
+    return;
+  }
+
+  if(studentData.referralCount >= 10 && !studentData.unlockRequested){
+
+    unlockSection.innerHTML =
+      "<button onclick='requestUnlock()'>Unlock Now</button>";
+
+  }else if(studentData.unlockRequested){
+
+    unlockSection.innerHTML =
+      "<p style='color:#FFD700;'>Verification Pending...</p>";
+  }
+}
+
+
+function shareLoginLink(){
+
+  const loginLink = window.location.origin + "/index.html";
+
+  const message =
+    "🔥 Join SSLC 2026 Crash Course FREE!\n\n" +
+    "Login using this link:\n" +
+    loginLink +
+    "\n\nUse this phone number as referral: " +
+    studentData.phone;
+
+  const whatsappURL =
+    "https://wa.me/?text=" + encodeURIComponent(message);
+
+  window.open(whatsappURL, "_blank");
+}
+
+
+async function requestUnlock(){
+
+  const user = auth.currentUser;
+
+  await db.collection("students").doc(user.uid).update({
+    unlockRequested: true
+  });
+
+  studentData.unlockRequested = true;
+
+  updateUnlockUI();
+
+  alert("Unlock request sent for verification.");
+}
+
+</script>
 </body>
 </html>
 
